        (including lists) now often make changes in place, rather than
        allocating a new vector.  A small amount of additional
        memory is sometimes allocated at the end of a vector to allow
        expansion without reallocation.  This improvement mirrors a
        recent improvement in R-3.4.0, but applies in more situations.
  \item Relational operators are now faster, and may sometimes be done in 
        helper threads (though currently without pipelining of data).
        Computations such as \code{sum(vec>0)} are now done with a
        merged procedure that avoids creating \code{vec>0} as an intermediate
        value.
  \item The \code{rep} function is now often faster for string vectors,
        and for vectors of any type that have names.
  \item Improved methods for symbol lookup are now used, which increase
        speed in many contexts, and especially in functions that are
        defined in packages (rather than in the global workspace).
  \item New versions of the C matrix multiply functions are now used,
        which may be faster due to use of the C "restrict" keyword to
        allow better optimization.
  \item The \code{\%\%} and \code{\%/\%} operators are now faster when 
        their operands are real vectors that contain integer values.
  }}

  \subsection{BUG FIXES}{
  \itemize{
  \item The documentation on \code{debug} and \code{debugonce} has been
        fixed to remove mention of the \code{text} and \code{condition} 
        arguments. These arguments were documented in R-2.10.0, and in 
        subsequent R Core versions to at least R-3.4.1, but they have never 
        been implemented as documented, but rather have always been 
        completely ignored.
  \item Previously, \code{length(plist)<-n} did not work when \code{plist}
        was a pairlist, but it does now.  This bug also exists in R Core
        versions to at least R-3.4.0.
  \item Fixed a bug illustrated by the following: