@@ -1,4 +1,5 @@
 Switch from using static boxes to using a scalar stack. 
 
-Also makes general improvements to do_subset.
+Also makes general improvements to do_subset and do_subset2, 
+including avoiding copy in unclass(obj)[1] or unclass(obj)[[1]].
 
